# pywinauto-mcp

./: .cursorignore  .env.example  .gitignore  AGENTS.md  AGENT_PROTOCOLS.md  CHANGELOG.md  CLAUDE.md  CODE_OF_CONDUCT.md  CONTRIBUTING.md  DXT_README.md  INSTALL.md  LICENSE  MANIFEST.in  README.md  SECURITY.md  URGENT_ASYNCIO_FIX_NEEDED.md  build_dxt.py  check_fastmcp.py  check_pywinauto.py  direct_mcp_test.py  direct_test.py  dxt_manifest.json  glama.json  inspect_toolresult.py  inspect_tools.py  justfile  list_mcp_tools.py  llms-full.txt  llms.txt  manifest.json  mcpb.json  paint_elements.json  pyproject.toml  pytest.ini  requirements-fastmcp.txt  requirements.txt  ruff_concise.txt  run_server.py  run_test.ps1  setup.py  (+20 more)
.github/ISSUE_TEMPLATE/: bug_report.md  feature_request.md
.github/workflows/: ci.yml  industrial-launch.yml
docs/: AHK_VS_PYWINAUTO_COMPARISON.md  ARCHITECTURE.md  ASSESSMENT.md  ASSESSMENT_2026-06-08.md  AUTOMATION_ASSERT_SPEC.md  CRITICAL_ASYNCIO_BUG_ANALYSIS.md  CUA_ASSISTANT_TODO.md  CUA_PARITY.md  CUA_PARITY_ROADMAP.md  CUA_ROADMAP.md  DESKTOP_APP.md  DEVELOPMENT.md  DOCUMENTATION_INDEX.md  DXT_BUILDING_GUIDE.md  ENHANCEMENT_PLAN.md  LLM_REPO_CONTEXT.md  MCP_PRODUCTION_CHECKLIST.md  MEMOPS_CUA.md  OFFICE_BACKGROUND_MATRIX.md  OPERATOR_PROTOCOL.md  ORGANIZATION_SUMMARY.md  PRD.md  PROGRESS.md  PROJECT_COMPLETION_ASSESSMENT.md  README.md  RENAME-TO-AUTOMATION-MCP.md  SAFETY.md  STATUS_REPORT.md  TARGETS_PAGE_SKETCH.md  TESTING.md  TOOLS.md  TOOL_REGISTRATION_FIX.md  USAGE_SCENARIOS.md  WINDSURF_TASK_TOOL_FIX.md  desktop-state-tool.md  main_py_patch.py  state-tool-implementation.md  windsurf_assessment.md
docs/development/: README.md
dxt/: DXT_BUILDING_GUIDE.md  build_dxt.py  dxt_manifest.json
examples/: README.md  calculator_advanced.py  demo_mouse_dance.py  demo_notepad_grid.py  demo_notepad_helpers.py  demo_notepad_typewriter.py  notepad_automation.ps1  notepad_basic.py  system_monitoring.py
mcpb/: .mcpbignore  DXT_README.md  README.md  manifest.json
scratch/: diagnose_paint.py  diagnose_surgical.py  inspect_tools.py
scripts/: build-mcpb-package.ps1  check-no-machine-paths.ps1  check-repo-standards.ps1  generate-tauri-icons.py  paint_demo.py  painterly_demo.py  text_demo.py
scripts/pyinstaller_hooks/: hook-charset_normalizer.py
skills/desktop-automation-protocol/: SKILL.md
src/pywinauto_mcp/: __init__.py  __main__.py  agent_overlay.py  app.py  app_profiles.py  assert_engine.py  cli.py  config.py  cua_env.py  dialog_engine.py  dispatch.py  face_recognition.py  keyboard_send.py  keylogger_service.py  llm_repo_context.py  main.py  main.py.backup  main_broken.py  mission_store.py  prompts.py  retry.py  safety.py  security.py  security_endpoints.py  server.py  shortcut_engine.py  snapshot_store.py  sysadmin_preflight.py  task_engine.py  trajectory.py  transport.py  win32_keyboard.py  win32_mouse.py  win32_window.py
src/pywinauto_mcp/api/: __init__.py  face_recognition.py  security.py
src/pywinauto_mcp/api/v1/: __init__.py
src/pywinauto_mcp/app_shortcuts/: __init__.py  registry.py
src/pywinauto_mcp/core/: config.py  decorators.py  plugin.py
src/pywinauto_mcp/desktop_state/: __init__.py  annotator.py  capture.py  formatter.py  ocr.py  walker.py
src/pywinauto_mcp/plugins/: __init__.py
src/pywinauto_mcp/services/: ocr_service.py
src/pywinauto_mcp/tools/: __init__.py  auto_discovery.py  basic_tools.py  computer_use_compat.py  desktop_state.py  element.py  element_tools.py  face_recognition.py  input.py  models.py  mouse.py  portmanteau_analyze.py  portmanteau_assert.py  portmanteau_dialog.py  portmanteau_elements.py  portmanteau_face.py  portmanteau_keyboard.py  portmanteau_keylogger.py  portmanteau_mission.py  portmanteau_mouse.py  portmanteau_shortcut.py  portmanteau_system.py  portmanteau_task.py  portmanteau_visual.py  portmanteau_windows.py  system_tools.py  utils.py  visual.py  visual_tools.py  window.py  window_state.py
tests/: README.md  conftest.py  conftest_env.py  test_app_integration.py  test_app_profiles.py  test_automation_assert.py  test_automation_dialog.py  test_automation_elements.py  test_automation_keyboard.py  test_automation_mouse.py  test_automation_shortcut.py  test_automation_task.py  test_automation_windows.py  test_basic_tools.py  test_cameras_api.py  test_cua_parity.py  test_dependency_failures.py  test_desktop_state.py  test_element_tools.py  test_face_recognition.py  test_face_recognition_api.py  test_mission.py  test_mouse_tools.py  test_portmanteau_windows_mock.py  test_portmanteau_windows_real.py  test_retry.py  test_safety_api.py  test_system_tools.py  test_template_library.py  test_utils.py  test_visual_tools.py  test_window_tools.py
tests/e2e/: conftest.py  test_libreoffice_cua_loop.py
tests/test_images/: README.md
web_sota/: biome.json  build-sidecar.ps1  index.html  package-lock.json  package.json  playwright.config.ts  start.ps1  start.ps1.bak.20260508_202351  tsconfig.app.json  vite.config.ts  vitest.config.ts
web_sota/e2e/: smoke.spec.ts  targets.spec.ts
web_sota/scripts/: build-desktop.ps1  install-mcp-clients.ps1  start-backend.ps1  start-e2e-stack.ps1  update-tauri-starts-link.ps1  wait-health.ps1
web_sota/src/: App.tsx  index.css  vite-env.d.ts
web_sota/src-tauri/: Cargo.toml  tauri.conf.json
web_sota/src-tauri/binaries/: .gitkeep
web_sota/src-tauri/capabilities/: default.json
web_sota/src-tauri/resources/: .gitkeep
web_sota/src-tauri/src/: backend.rs  main.rs  mcp_client.rs
web_sota/src-tauri/windows/: hooks.nsh
web_sota/src/chat/: personas.ts
web_sota/src/common/: apps-catalog.ts
web_sota/src/components/: CameraPreview.tsx  CameraSelect.tsx  McpClientPanel.tsx  McpOnboardingDialog.tsx
web_sota/src/hooks/: useCameras.ts  useHitl.ts  useMcpSetup.ts  useTaskRunner.ts  useWindowFind.ts
web_sota/src/lib/: api.ts  mcpTools.ts  toolResult.test.ts  toolResult.ts
web_sota/src/pages/: biometrics.tsx  chat.tsx  control.tsx  crawler.tsx  dashboard.tsx  elements.tsx  help.tsx  settings.tsx  targets.tsx  tools.tsx  visualizer.tsx  windows.tsx
(+48 files in other folders)
