[build-system]
requires = ["setuptools>=42.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "pywinauto-mcp"
version = "0.3.2"
description = "Windows UI automation (PyWinAuto): desktop control — read docs/SAFETY.md; pair with virtualization-mcp for Sandbox/VM isolation. FastMCP 3.1+ portmanteau."
readme = "README.md"
authors = [
    {name = "Sandra Schilling", email = "sandra@example.com"},
]
requires-python = ">=3.12"
classifiers = [
    "Development Status :: 4 - Beta",
    "Intended Audience :: Developers",
    "Intended Audience :: System Administrators",
    "License :: OSI Approved :: MIT License",
    "Operating System :: Microsoft :: Windows :: Windows 10",
    "Operating System :: Microsoft :: Windows :: Windows 11",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Topic :: Desktop Environment",
    "Topic :: Software Development :: Testing",
    "Topic :: System :: Systems Administration",
]

dependencies = [
    # Core MCP framework - FastMCP 2.13.1
    "fastmcp>=3.1.0,<4",
    "fastapi>=0.95.0",
    "uvicorn[standard]>=0.22.0",
    "python-dotenv>=1.0.0",
    "pydantic>=2.0.0,<3.0.0",
    
    # Windows automation
    "pywinauto>=0.6.8,<1.0.0",
    "pywin32>=311; platform_system=='Windows'",
    "psutil>=5.9.0",
    "pygetwindow>=0.0.9,<1.0.0",
    "pyautogui>=0.9.54",
    "pyperclip>=1.8.2",
    
    # Image processing and OCR
    "pillow>=10.0.0",
    "numpy>=1.24.0",
    "opencv-python-headless>=4.8.0",
    "pytesseract>=0.3.10",
    "comtypes>=1.2.0",
    
    # Security features (optional for face recognition)
    "cryptography>=41.0.0",
    
    # Utilities
    "typing-extensions>=4.5.0",
    "python-dateutil>=2.8.2",
    "httpx>=0.24.0",
    "aiofiles>=23.1.0",
    "orjson>=3.8.0"
]

[project.urls]
Homepage = "https://github.com/sandraschi/pywinauto-mcp"
Documentation = "https://github.com/sandraschi/pywinauto-mcp#readme"
Issues = "https://github.com/sandraschi/pywinauto-mcp/issues"
Source = "https://github.com/sandraschi/pywinauto-mcp"

[project.scripts]
pywinauto-mcp = "pywinauto_mcp.main:main"

[project.optional-dependencies]
face = [
    "face_recognition>=1.3.0",
    "dlib>=19.24.0",
]

dev = [
    # Testing
    "pytest>=7.4.0",
    "pytest-cov>=4.1.0",
    "pytest-asyncio>=0.21.0",
    "pytest-mock>=3.11.0",
    "pytest-xdist>=3.3.1",
    "pytest-html>=4.0.0",
    "pytest-timeout>=2.1.0",
    
    # Code quality
    "black>=23.7.0",
    "isort>=5.12.0",
    "mypy>=1.4.0",
    "ruff>=0.0.280",
    "pre-commit>=3.3.0",
    
    # Documentation
    "mkdocs>=1.4.3",
    "mkdocs-material>=9.1.15",
    "mkdocstrings[python]>=0.22.0",
    "mkdocs-autorefs>=0.4.1",
    
    # Type stubs
    "types-psutil>=5.9.0",
    "types-python-dateutil>=2.8.0",
    "types-requests>=2.28.0",
]

all = [
    "pywinauto-mcp[face,dev]",
]

[project.entry-points]
"fastmcp.plugins" = { pywinauto = "pywinauto_mcp.plugins:setup_plugin" }

[tool.setuptools.packages.find]
where = ["src"]

[tool.black]
line-length = 100
target-version = ["py310"]
include = '\.pyi?$'

[tool.isort]
profile = "black"
line_length = 100

[tool.pytest.ini_options]
testpaths = ["tests"]
python_files = ["test_*.py"]
asyncio_mode = "auto"
markers = [
    "requires_hardware: needs local Windows host (OpenCV/camera/desktop) — skipped in CI",
    "requires_network: needs LAN — skipped in CI",
    "ci_only: contract tests meant for CI — skipped on local unless CI=true",
    "slow: opt-in slow tests",
    "destructive: real UI/input — skipped in CI",
]

[tool.mypy]
python_version = "3.10"
warn_return_any = true
warn_unused_configs = true
disallow_untyped_defs = true
check_untyped_defs = true
no_implicit_optional = true
strict_optional = true
warn_redundant_casts = true
warn_unused_ignores = true
warn_no_return = true
warn_unreachable = true

[tool.mcpb]
name = "pywinauto-mcp"
display_name = "PyWinAuto MCP - Portmanteau Edition"
version = "0.3.0"
description = "Windows UI automation with 8 comprehensive portmanteau tools"
entry_point = "pywinauto_mcp.main:app"

# Portmanteau Tools Definition
[[tool.dxt.tools]]
name = "automation_windows"
description = "Window management: list, find, maximize, minimize, restore, close, activate, position, rect, title, state"
category = "windows"

[[tool.dxt.tools]]
name = "automation_elements"
description = "UI element interaction: click, double_click, right_click, hover, info, text, set_text, rect, visible, enabled, exists, wait, verify_text, list"
category = "elements"

[[tool.dxt.tools]]
name = "automation_mouse"
description = "Mouse control: position, move, move_relative, click, double_click, right_click, scroll, drag, hover"
category = "mouse"

[[tool.dxt.tools]]
name = "automation_keyboard"
description = "Keyboard input: type, press, hotkey, hold"
category = "keyboard"

[[tool.dxt.tools]]
name = "automation_visual"
description = "Visual operations: screenshot, extract_text (OCR), find_image, highlight"
category = "visual"

[[tool.dxt.tools]]
name = "automation_face"
description = "Face recognition: add, recognize, list, delete, capture"
category = "face"

[[tool.dxt.tools]]
name = "automation_system"
description = "System utilities: health, help, wait, wait_for_window, clipboard_get, clipboard_set, process_list"
category = "system"

[[tool.dxt.tools]]
name = "get_desktop_state"
description = "Comprehensive desktop UI element discovery with visual annotations and OCR"
category = "desktop"

[tool.dxt.config]
log_level = "INFO"
max_workers = 4
request_timeout = 30.0

[tool.ruff]
line-length = 120
target-version = "py312"

[tool.ruff.lint]
select = ["E", "F", "W", "I", "B", "S", "UP", "RUF"]
ignore = ["S101", "B008"]

[tool.ruff.format]
quote-style = "double"
indent-style = "space"
